--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name=".edit_task"
+            android:exported="false">
+
+        </activity>
 
 
     </application>
